[package]
name = "spiro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.12"
eframe = "0.23.0"
egui_plot = "0.23.0"
fastrand = { version = "2.0.1", features = ["js"] }
image = "0.24.7"
log = "0.4.20"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 2
