[package]
name = "spiro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.23", features = ["persistence"] }
egui_plot = "0.23"
fastrand = { version = "2.0", features = ["js"] }
image = "0.24"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
argh = "0.1"

[profile.release]
opt-level = 2
